Adding Tests for new API.
